code source formated for all java files
git-svn-id: https://patmos.banatao.berkeley.edu:8889/svnbase/outbids/code/trunk@55 e5a44606-1236-43ac-9aa5-cdde1b33ff33